fix control alignment on mobile

--- a/src/DataView/YearPicker.scss
+++ b/src/DataView/YearPicker.scss
@@ -1,7 +1,8 @@
 .year-picker {
-  margin-left: 1em;
+  margin-left: 1rem;
   font-weight: bold;
 
+  border-radius: 0.25em;
   background-color: #F0F0F0;
   > span {
 
