--- a/src/DataView/styles.scss
+++ b/src/DataView/styles.scss
@@ -31,7 +31,7 @@
 }
 
 .energyTypeToggle {
-  margin-left: 1em;
+  margin-left: 1rem;
   display: inline-block;
   padding: 0.2em 0.5em;
   font-weight: bold;
@@ -46,23 +46,24 @@
 }
 .controls {
   display: flex;
-  margin-left: 1em;
-  @media (max-width: 1150px) {
+  margin-left: 1rem;
+  @media (max-width: 1200px) {
     flex-direction: column-reverse;
     align-items: flex-start;
+    margin-left: 0;
     .energyTypeToggle:first-of-type {
-      margin-left: 1em;
+      margin-left: 1rem;
     }
 
     .energyTypes {
-      margin-bottom: 1em;
+      margin-bottom: 1rem;
     }
 
     .switch {
-      margin-left: 1em;
-      margin-top: 1em;
+      margin-left: 1rem;
+      margin-top: 1rem;
       + .switch {
-        margin-left: 1em;
+        margin-left: 1rem;
       }
     }
   }
@@ -76,6 +77,12 @@
       > span {
         margin-left: 0;
         border-left: 0;
+      }
+    }
+
+    .energyTypes {
+      svg[data-tip] {
+        display: none;
       }
     }
   }
